--- a/practice_while_working.html
+++ b/practice_while_working.html
@@ -1,25 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-    <title>Interactive Web Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>내 일기장 (Notion 연동)</title>
     <style>
-        h1 {
-            color: #333333; /* 어두운 회색 */
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 600px;
+            margin: 20px auto;
+            background-color: #f8f8f8;
         }
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px;
-            background-color: #123123;
+        .diary-entry {
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background: white;
         }
-        p {
-            color: #333;
+        .entry-header {
+            padding: 10px;
+            background: #007BFF;
+            color: white;
+            cursor: pointer;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
         }
-        button {
-            padding: 100px 200px; font-size: 36px;
-            background-color: #4CAF50;
+        .entry-content {
+            display: none;
+            padding: 10px;
+            border-top: 1px solid #ccc;
         }
     </style>
 </head>
 <body>
-    <h1>Click the Button Below</h1>
-    <button onclick="alert('Hello, HTML World!')">Click Me!</button>
+    <h2>내 일기장 (Notion 연동)</h2>
+    <div id="diary-container">로딩 중...</div>
+
+    <script>
+
+
+        async function fetchDiaryEntries() {
+            const response = await fetch(`https://api.notion.com/v1/databases/${DATABASE_ID}/query`, {
+                method: "POST",
+                headers: {
+                    "Authorization": `Bearer ${NOTION_API_KEY}`,
+                    "Notion-Version": "2022-06-28",
+                    "Content-Type": "application/json"
+                }
+            });
+
+            const data = await response.json();
+            displayEntries(data.results);
+        }
+
+        function displayEntries(entries) {
+            const container = document.getElementById("diary-container");
+            container.innerHTML = ""; // 기존 내용 삭제
+
+            entries
+                .sort((a, b) => new Date(b.properties.날짜.date.start) - new Date(a.properties.날짜.date.start)) // 최신 날짜 순 정렬
+                .forEach(entry => {
+                    const date = entry.properties.날짜.date.start;
+                    const content = entry.properties.내용.rich_text.map(text => text.plain_text).join("");
+
+                    const entryDiv = document.createElement("div");
+                    entryDiv.className = "diary-entry";
+
+                    const headerDiv = document.createElement("div");
+                    headerDiv.className = "entry-header";
+                    headerDiv.textContent = date;
+                    headerDiv.onclick = () => {
+                        contentDiv.style.display = contentDiv.style.display === "block" ? "none" : "block";
+                    };
+
+                    const contentDiv = document.createElement("div");
+                    contentDiv.className = "entry-content";
+                    contentDiv.textContent = content;
+
+                    entryDiv.appendChild(headerDiv);
+                    entryDiv.appendChild(contentDiv);
+                    container.appendChild(entryDiv);
+                });
+        }
+
+        fetchDiaryEntries();
+    </script>
 </body>
 </html>
